--- a/2022_MagIC_database_and_open_science.ipynb
+++ b/2022_MagIC_database_and_open_science.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "This notebook can be run by launching Binder from the GitHub repository.  \n",
     "\n",
-    "- Go to [https://github.com/PmagPy/2022_Tauxe-et-al_MagIC-Database-and-Open-Science](https://github.com/PmagPy/2022_Tauxe-et-al_MagIC-Database-and-Open-Science) and click on Binder label at the top of the README.md file.\n",
+    "- Go to [https://github.com/earthcube2022/ec22_tauxe_etal.git](https://github.com/earthcube2022/ec22_tauxe_etal.git) and click on Binder label at the top of the README.md file.\n",
     "\n",
     "- Once the dependencies are installed, JupyterLab loads, and the notebook opens, the cells in the notebook can be executed and edited as needed.\n",
     "\n",
